tests/golden/type_errors/field_compound_unknown_field.cd
struct Person { name: string }
let p: Person = Person { name: "Ada" };
p.age += 1;
